--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
@@ -26,7 +24,6 @@ jobs:
       - name: Run a one-line script
         run: echo Running build
         
-      - name: Hugo Actions
-        # You may pin to the exact commit or the version.
-        # uses: srt32/hugo-action@45dd72ab904158d21657b29c5aa67007a8fcdaba
-        uses: srt32/hugo-action@v0.0.3
+      - name: Hugo Actions        
+        uses: srt32/hugo-action@master
+        args: -D -d coding4kids -c src/coding4kids
