add the hugo build step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,6 @@ jobs:
         
       - name: Hugo Actions        
         uses: srt32/hugo-action@master
-        args: -D -d coding4kids -c src/coding4kids
+      
+      - name: Build
+        run: hugo -D -d coding4kids -c src/coding4kids
