--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Run a one-line script
         run: echo Running build
         
-      - name: Hugo Actions        
-        uses: srt32/hugo-action@master
+      - name: Hugo Actions          
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.74.2'
       
       - name: Build
         run: hugo -D -d coding4kids -c src/coding4kids
