use diff action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,19 +34,13 @@ jobs:
         run: |
           cd src/coding4kids
           hugo -D -d coding4kids
-      
-      - name: Set Working directory
-        run: |
-          cd ./
-        shell: bash
 
       - name: push
-        uses: github-actions-x/commit@v2.7
+        uses: EndBug/add-and-commit@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: 'master'
-          commit-message: 'publish'
-          force-add: 'true'
-          files: coding4kids/
-          name: Srini CI
-          email: srini85@gmail.com
+          message: 'publish'
+          force: 'true'
+          author_name: Srini CI
+          author_email: srini85@gmail.com
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
