--- a/src/coding4kids/config.toml
+++ b/src/coding4kids/config.toml
@@ -50,45 +50,24 @@ URL = "about"
 weight = 1
 
 [[menu.main]]
+name = "Sign Up"
+URL = "https://bit.ly/coding4kids-sv"
+weight = 2
+
+[[menu.main]]
 weight = 3
-name = "Pages"
+name = "Details"
 asChildren = true
 
   [[menu.main]]
-  parent = "Pages"
-  name = "teacher"
+  parent = "Details"
+  name = "educators"
   URL = "teacher"
-
-  [[menu.main]]
-  parent = "Pages"
-  name = "notice"
-  URL = "notice"
-
-  [[menu.main]]
-  parent = "Pages"
-  name = "event"
-  URL = "event"
-
-  [[menu.main]]
-  parent = "Pages"
-  name = "scholarship"
-  URL = "scholarship"
-
-  [[menu.main]]
-  parent = "Pages"
-  name = "research"
-  URL = "research"
-  
-[[menu.main]]
-name = "Contact"
-URL = "contact"
-weight = 5
-
 
 # footer menu
 
 [[menu.footer]]
-name = "teacher"
+name = "educators"
 URL = "teacher"
 
 [[menu.footer]]
