--- a/src/coding4kids/config.toml
+++ b/src/coding4kids/config.toml
@@ -50,9 +50,14 @@ URL = "about"
 weight = 1
 
 [[menu.main]]
+name = "Courses"
+URL = "course"
+weight = 2
+
+[[menu.main]]
 name = "Sign Up"
 URL = "https://bit.ly/coding4kids-sv"
-weight = 2
+weight = 3
 
 # footer menu
 
