add some images

--- a/src/coding4kids/config.toml
+++ b/src/coding4kids/config.toml
@@ -141,4 +141,4 @@ contentDir = "content/english"
 weight = 1
 home = "Home"
 # copyright
-copyright = "Copyright &copy; 2020 a hugo theme by [themefisher](https://themefisher.com)"
+copyright = "Copyright &copy; 2020 a hugo theme by [themefisher](https://themefisher.com) | [Ethnicity Vectors by Vecteezy](https://www.vecteezy.com/free-vector/ethnicity)</a>"
