--- a/src/coding4kids/data/en/homepage.yml
+++ b/src/coding4kids/data/en/homepage.yml
@@ -29,7 +29,7 @@ slider:
 ############################### Banner feature ###############################
 banner_feature:
   enable : true
-  image : "images/banner/banner-feature.png"
+  image : "images/home/children_study.png"
   feature_item:
     # feature item loop
     - name : "Fun"
@@ -56,7 +56,7 @@ banner_feature:
 about:
   enable : true
   title : "About Coding for kids"
-  image : "images/about/about-us.jpg"
+  image : "images/home/super_hero.png"
   content : "Stay Tuned for more information "
   button:
     enable : false
